Updated cover sheet

--- a/Cover.tex
+++ b/Cover.tex
@@ -8,16 +8,19 @@
 
 \textbf{\large ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE}\\ % Name of university/college
 \textbf{\large SCHOOL OF LIFE SCIENCES}\\[0.5cm] % Name of university department
-\includegraphics[scale=0.33]{img/epfl_logo.png}\\[1.25cm] % Include a department/university logo - this will require the graphicx package
-\large{Master project in Life Sciences Engineering}\\[1.25cm] % Major heading such as course name
+\includegraphics[scale=0.33]{img/epfl_logo.png}\\[0.5cm] % Include a department/university logo - this will require the graphicx package
+\large{Master project in Life Sciences Engineering}\\[1.5cm] % Major heading such as course name
 
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 
 % Title of your document
-\textbf{\Large \textbf{MASTER PROJECT TITLE GOES HERE}}\\[2cm]
+\textbf{\Large \textbf{MASTER PROJECT TITLE GOES HERE}}\\[1cm]
 
+Carried out in the laboratory of (lab name) \\
+at (place, Institution)\\
+Under the supervision of (name, title (Prof, PhD, head of lab if on exchange) \\[1cm]
 %----------------------------------------------------------------------------------------
 %	AUTHOR SECTION
 %----------------------------------------------------------------------------------------
@@ -32,20 +35,19 @@
 
 Done by\\[0.5cm]
 
-\textbf{\large Person Doe}\\[0.75cm]
+\textbf{\large Maximilian Wettstein}\\[0.75cm]
 
 \parbox{\textwidth}{
-    \centering Under the direction of \\
-    Prof. Persona Doa \\
-    Position \\
-    University, City, Country
+\centering Under the direction of \\
+Prof. first name, last name (advising Prof EPFL)\\
+In the laboratory of (lab name)\\
 }\\[0.75cm] 
 
+\centering EPFL \\[0.75cm] 
+
 \parbox{\textwidth}{
-    \centering External expert: \\
-    Prof. Personne Deaux \\
-    Position \\
-    University, City, Country
+\centering External Expert (First and last names, title of your oral exam expert, if different from your lab
+supervisor in the foreign lab and already mentioned above)
 }\\[0.75cm]
 
 %----------------------------------------------------------------------------------------
